# QtRag

./: CMakeLists.txt  README.md
cmake/: QtRagConfig.cmake.in
include/QtRag/: IRagEmbedder.h  IRagStorage.h  QtRag.h  RagConfig.h  RagEngine.h  RagTextChunker.h  RagTypes.h
src/: RagEngine.cpp  RagTextChunker.cpp
